add anonymous app usage analytics
